// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceNavigatorContainer renders correctly 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-8"
    >
      <div>
        <div>
          <div
            className="input-group input-group-lg"
          >
            <input
              className="form-control"
              name="providerSearchTerm"
              onChange={[Function]}
              placeholder="Search for providers"
              type="text"
              value=""
            />
            <input
              className="form-control"
              name="zipSearchTerm"
              onChange={[Function]}
              placeholder="Zip code"
              type="text"
              value=""
            />
            <div
              className="input-group-append"
            >
              <button
                className="btn btn-primary"
                onClick={[Function]}
                type="button"
              >
                Search
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-3 text-right"
    >
      <a
        href="#"
      >
        Sign up
      </a>
    </div>
    <div
      className="col-1"
    >
      <a
        href="#"
      >
        Log in
      </a>
    </div>
  </div>
  <br />
  <br />
  <div
    className="row"
  >
    <div
      className="col-3"
    >
      <div
        style={
          Object {
            "position": "fixed",
          }
        }
      >
        <ul
          className="list-group"
        />
      </div>
    </div>
    <div
      className="col-9"
    >
      <ul
        className="list-group no-border"
      />
    </div>
  </div>
</div>
`;

exports[`ServiceNavigatorContainer renders correctly 2`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-8"
    >
      <div>
        <div>
          <div
            className="input-group input-group-lg"
          >
            <input
              className="form-control"
              name="providerSearchTerm"
              onChange={[Function]}
              placeholder="Search for providers"
              type="text"
              value="J123"
            />
            <input
              className="form-control"
              name="zipSearchTerm"
              onChange={[Function]}
              placeholder="Zip code"
              type="text"
              value=""
            />
            <div
              className="input-group-append"
            >
              <button
                className="btn btn-primary"
                onClick={[Function]}
                type="button"
              >
                Search
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-3 text-right"
    >
      <a
        href="#"
      >
        Sign up
      </a>
    </div>
    <div
      className="col-1"
    >
      <a
        href="#"
      >
        Log in
      </a>
    </div>
  </div>
  <br />
  <br />
  <div
    className="row"
  >
    <div
      className="col-3"
    >
      <div
        style={
          Object {
            "position": "fixed",
          }
        }
      >
        <ul
          className="list-group"
        />
      </div>
    </div>
    <div
      className="col-9"
    >
      <ul
        className="list-group no-border"
      />
    </div>
  </div>
</div>
`;
